<?xml version="1.0"?>
<package format="2">
  <name>hough2map</name>
  <version>0.0.0</version>
  <description>Hough2Map --  Iterative Event-based Hough Transform for High-Speed Railway Mapping</description>
  <maintainer email="florian.tschopp@mavt.ethz.ch">Florian Tschopp</maintainer>
  <maintainer email="andrei.cramariuc@mavt.ethz.ch">Andrei Cramariuc</maintainer>
  <maintainer email="cornelius.voneinem@mavt.ethz.ch">Cornelius von Einem</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>dvs_msgs</depend>
  <depend>custom_msgs</depend>

  <depend>maplab_ros_common</depend>
  <depend>eigen_catkin</depend>
  <depend>opencv3_catkin</depend>
  <depend>cv_bridge</depend>
  <depend>glog_catkin</depend>
  <depend>gflags_catkin</depend>
</package>
